# RT

./: .gitignore  CMakeLists.txt  Makefile  README.md  author  scene1.json  scene2.json  scene3.json  scene5.json  scene6.json  scene7.json
includes/: rt.h  rtv1.h
libft/: ft_memccpy.c
libft/includes/: libft.h
parson/: Makefile
scenes/: porn.json  scene1.json  scene2.json  scene3.json  scene4.json  scene5.json  scene6.json  scene7.json  scene8.json
src/: cl.c  cl2.c  do_rt.c  do_rt.cl  main.c  rt_sdl_load_textures.c  sdl_load_image.c  space.c
src/color/: color.c
src/figure/: cone.c  cylinder.c  figure.c  ftriangle.c  plane.c  sphere.c  triangle.c
src/figures/: infinite_cone.c  infinite_cylinder.c  ray.c  sphere.c
src/light/: light.c
src/parse/: cam.c  cone.c  cylinder.c  error.c  ft_hexatoi.c  get_cam.c  get_color_reflection.c  get_cone.c  get_cylinder.c  get_direct_light.c  get_ellipsoid.c  get_figure_params.c  get_figure_texture.c  get_infinite_cone.c  get_infinite_cylinder.c  get_infinite_plane.c  get_light.c  get_params.c  get_space.c  get_sphere.c  get_triangle.c  get_vector.c  light.c  parse.c  parse_cone.c  parse_cylinder.c  parse_error.c  parse_plane.c  parse_sphere.c  plane.c  sphere.c  triangle.c
src/render/: cam.cl  intersections.cl  main.cl  normales.cl  remove.cl  struct.cl  uv_mapping.cl
src/scene_objects/: cone.c  cylinder.c  ellipsoid.c  infinite_cone.c  infinite_cylinder.c  infinite_plane.c  light_init.c  sphere.c  triangle.c
src/vector/: rotate.c  vector.c  vector2.c
